Updated body style

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<head>
+	<style>
+		body {
+			background-color: black;
+			color: goldenrod;
+			font-family: sans-serif;
+		}
+	</style>
+	<title>RPi LED</title>
+</head>
 	<body>
 		<h1>Control the LED!</h1>
 		<input id="light" type="checkbox"> LED
